fix(docs-infra): allow wrapping of types-and-default CLI options (#63211)
This change fixes an issue where long lists of enum values would display on a single line, running off the screen, especially on mobile devices.

PR Close #63211

--- a/adev/shared-docs/styles/_reference.scss
+++ b/adev/shared-docs/styles/_reference.scss
@@ -393,7 +393,6 @@
             display: block;
             font-size: 0.875rem;
             margin-block-end: 0.2rem;
-            white-space: nowrap;
 
             &:not(:first-child) {
               margin-block-start: 1rem;
